fix: resolve SonarQube code quality issues across 8 files
- PresenceController: document empty default switch block
- RoutingController: use Math.clamp instead of nested Math.min/Math.max
- ItemService: extract helper methods to reduce cognitive complexity of updateItem
- MacroRoutingService: use unnamed catch pattern for unused exception
- RoutingService: mask user-controlled storeId in log output
- QuantityParser: use \d regex, extract WEIGHT/VOLUME constants, remove unused vars
- ItemServiceTest: replace 3 redundant quantity validation tests with parameterized test
- LocationProcessorWorkerTest: add missing assertion, convert to AssertJ style